2008-03-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/gen-avr-lib-tree.sh: replace \\\\\n by just a
	space, it's causing way less troubles.

2008-03-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/iocompat.h: Add support for ATmega1284P,
	ATmega2560, and ATmega2561.
	* doc/examples/demo/Makefile: (Ditto.)

2008-03-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/runtest.sh: Turn the bash-like arithmetics into
	Posix ones, so it runs correctly on FreeBSD's /bin/sh.

2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22390.
	* doc/api/faq.dox: Fix statement about function pointers.

2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22119.
	* doc/api/faq.dox: Fix statement about returned values.

2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #19494.
	* doc/api/sfr.dox: Rewrite to remove deprecated code examples.

2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22276.
	* include/avr/wdt.h: Check location of watchdog register and use
	that to determine which code sequence to define.

2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bugs #22447, #22387.
	* include/avr/iom88p.h: Fix definitions or add definitions.
	* include/avr/iom168p.h: Ditto.
	* include/avr/iom328p.h: Ditto.
	* include/avr/iom48p.h: Ditto.

2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22642.
	* include/avr/power.h: Add support for AT90USB82 and AT90USB162.

2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22643.
	* include/math.h: Rename occurrences of 'asm' needs to to '__asm__'.

2008-03-16  Eric B. Weddington  <eric.weddington@atmel.com>

	Patch #6355, by Stas Sergeev
	* include/avr/boot.h: add __extension__ to boot.h.

2008-03-16  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bugs #22568, #22548.
	* include/avr/iom328p.h: Add missing definitions.